Fix admin-products table overflow

--- a/Frontend/src/css/adminProducts.css
+++ b/Frontend/src/css/adminProducts.css
@@ -6,6 +6,12 @@
   width: 100%;
   position: relative;
 }
+
+.admin-product-details-tb-wrapper {
+  width: 100%;
+  overflow: auto;
+}
+
 .admin-component-heading {
   position: absolute;
   top: -32px;
@@ -559,6 +565,7 @@
 .admin-product-details th {
   box-sizing: border-box;
   padding: 15px;
+  font-size: 16px;
   background-color: #343434;
   color: white;
   font-weight: 400;
@@ -715,4 +722,48 @@
 }
 .pages span {
   margin: 0 5px 10px 5px;
+}
+
+@media (max-width: 920px) {
+  .admin-product-details th {
+    font-size: 13px;
+  }
+
+  .admin-product-details-container h2 {
+    font-size: 12px;
+  }
+
+  .admin-product-details-container h3,
+  .admin-product-details-container h4 {
+    font-size: 11px;
+  }
+
+  .admin-product-details-container .item-stock {
+    font-size: 14px !important;
+  }
+  .trend-toggle-icon span {
+    width: 60%;
+    height: 112%;
+    top: -1px;
+  }
+  .admin-product-container
+    .admin-product-details
+    .admin-product-details-container
+    div:last-child
+    div {
+    width: 28px;
+    height: 15px;
+  }
+  .admin-product-container .admin-product-container-search {
+    height: 35px;
+  }
+  .admin-product-container .admin-product-container-search input {
+    font-size: 13px;
+  }
+  .admin-product-container .admin-product-container-search button {
+    height: 35px;
+  }
+  .admin-product-container .admin-product-container-search .search-icon {
+    font-size: 14px !important;
+  }
 }
